# bevy_splash_kit

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  security_audit.yml
examples/: simple.rs  text_splash.rs
src/: lib.rs  plugin.rs  structs.rs  systems.rs  timeline.rs
