[package]
name = "bevy_splash_kit"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.17.3", default-features = false, features = ["bevy_state"]}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["bevy_log", "bevy_winit", "bevy_window", "bevy_ui", "bevy_render", "bevy_ui_render", "bevy_image", "default_font", "bevy_text"] }
